--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 					</div>
 
 					<footer>
-						<a href="http://bit.ly/2lnEAeJ" class="button">Get Started</a>
+						<a href="http://bit.ly/2lnEAeJ" class="button"
+                                      onClick="ga('sent, 'event', 'link', 'click', 'button', 100);">Get Started</a>
 					</footer>
 				</div>
 			</section>
